refactor : use wrapping primitive type